--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,12 @@ section {
   transition: ease 0.3s all;
 }
 
+#navbar__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 /* Header Styles */
 .page__header {
   background: #fff;
